css/default.css
/* ... */
#markdownBody .sidenote.cut-off .sidenote-outer-wrapper::-webkit-scrollbar-thumb {
    background-image: url('data:image/gif;base64,R0lGODlhBAAEAPAAMXd3d////ywAAAAABAAEAAACBgQShqgJBQA7');
    box-shadow:
        0 0 0 2px var(--GW-sidenote-scrollbar-track-color) inset;
    background-size: 2px;
}
#markdownBody .sidenote.cut-off .sidenote-outer-wrapper::-webkit-scrollbar-thumb:hover {
    background-image: url('data:image/gif;base64,R0lGODlhBAAEAPAAMQAAAP///ywAAAAABAAEAAACBgQShqgJBQA7');
}

/*  Scroll bar styles (for Firefox).
    */
#markdownBody .sidenote.cut-off .sidenote-outer-wrapper {
    scrollbar-color: var(--GW-sidenote-scrollbar-thumb-color) var(--GW-sidenote-scrollbar-track-color);
}
#markdownBody .sidenote.cut-off .sidenote-outer-wrapper:hover {
    scrollbar-color: var(--GW-sidenote-scrollbar-thumb-hover-color) var(--GW-sidenote-scrollbar-track-color);
}

/*  Inner wrapper (does not scroll; stretches to height of content).
    */
.sidenote-inner-wrapper {
    position: relative;
    margin: 0.5em 0;
}

/*  Ensure content is interactive.
    */
.sidenote-inner-wrapper > * {
    position: relative;
    z-index: 1;
}

/*=--------------------------------------=*/
/*= Sidenote contents layout corrections =*/
/*=--------------------------------------=*/

#markdownBody .sidenote blockquote {
    margin: 1.5em 0 0.75em 0;
}
#markdownBody .sidenote pre {
    margin: 1.75em 0 0.75em 0;
}
#markdownBody .sidenote blockquote + *,
#markdownBody .sidenote pre + * {
    margin-top: 1.75em;
}

#markdownBody .sidenote p + p {
    text-indent: 1.25em;
}

#markdownBody .sidenote ul,
#markdownBody .sidenote ol {
    --GW-list-left-padding: 1.75em;
}

#markdownBody .sidenote li {
    text-align: left;
}

/*=-------------------------------=*/
/*= Sidenote self-links (numbers) =*/
/*=-------------------------------=*/

#markdownBody .sidenote > .sidenote-self-link {
    font-weight: 600;
    position: absolute;
    top: 0;
    border-style: dotted;
    border-color: var(--GW-sidenote-self-link-border-color);
    border-width: 1px 1px 0px 1px;
    width: 2em;
    height: 2em;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 1;
}
/*  Disable link underlining.
    */
.markdownBody .sidenote > .sidenote-self-link {
    background-image: none;
}
#markdownBody #sidenote-column-left .sidenote > .sidenote-self-link {
    right: 0;
}
#markdownBody #sidenote-column-right .sidenote > .sidenote-self-link {
    left: 0;
}

/*=------------=*/
/*= Edge cases =*/
/*=-------------=*/

#markdownBody .sidenote .footnote-self-link {
    display: none;
}

#markdownBody .sidenote .footnote-back {
    vertical-align: text-top;
}

#markdownBody .sidenote blockquote + a.footnote-back,
#markdownBody .sidenote pre + a.footnote-back,
#markdownBody .sidenote .sourceCode + a.footnote-back {
    top: unset;
    bottom: 0;
}

/*=--------------=*/
/*= Margin notes =*/
/*=--------------=*/
/* display inline on mobile/narrow windows; on sufficiently-wide screens, pop out as number-less sidenotes */

.marginnote {
    /* bolding turns out to be too obtrusive for users' liking; italicized both inline & popped-out */
    font-style: italic;
    color: var(--GW-body-text-color);
    font-family: var(--GW-serif-font-stack);
}
.marginnote.inline {
    color: inherit;
}
#markdownBody .marginnote.sidenote {
    display: flex;
    justify-content: right;
    /*  925px because that’s the width of #markdownBody at the widths where we
        get margin notes. Someday, find a way to auto-compute this (but note
        that `50%` doesn’t work in place of `(925px / 2)`; it breaks when the
        margin note is within a narrower block, like a <p> within an <ol>).
        —SA 2022-03-28
     */
    width: calc(50vw - ((925px / 2) + 96px));
    max-width: var(--GW-sidenotes-max-width);
    right: calc(100% + 64px);
    left: unset;

    /*  We inherit left and right padding from .sidenote class. */
    padding-top: 0.5em;
    padding-bottom: 0.5em;

    font-size: calc(var(--GW-body-text-font-size) * 0.85);
    text-align: left;
    text-indent: 0;
    -webkit-hyphens: none;
    hyphens: none;
    opacity: 0.85;
    z-index: 1;
}
#markdownBody .marginnote.sidenote .marginnote-inner-wrapper {
    display: block;
    width: fit-content;
}

#markdownBody .marginnote.sidenote:hover {
    box-shadow: none;
}
/* make links in margin notes (somewhat unusual but should be supported simply because that's what one would expect) clickable/hover-able */
#markdownBody .marginnote.sidenote::after {
    z-index: -1;
}

/*  Margin notes within admonitions need special layout.
    This is based on the width of the admonition icon area.
    */
#markdownBody .admonition .marginnote.sidenote {
    width: calc(50vw - ((100% + (2.875em / (0.85/0.875)))/2 + 96px));
}

/**********/
/* TABLES */
/**********/

table {
    margin: 0;
    padding: 0;
    border-collapse: collapse;
    width: 100%;
    font-size: 0.75em;
    border-style: solid;
    border-color: var(--GW-table-border-color);
    border-width: 2px 0;
}

/*=--------------=*/
/*= Small tables =*/
/*=--------------=*/

.table-wrapper.table-small {
    width: fit-content;
    margin-left: auto;
    margin-right: auto;
}

/*  Floating small tables.
    NOTE: we do not float small tables by default, although this is an appealing idea because so many small tables could be floated usefully, especially in popups.
    But when tried on heavy users like /clone#mackenzie-et-al-1986 or /ab-testing, floated small tables interact badly with code blocks/paragraphs/figures. One would need more intelligence than just making them all float left (or right), so they are left unfloated and must be manually floated (usually in a left/right zig-zag).
 */
.table-small.float-left {
    float: left;
    max-width: calc(50% - 1.5em);
    margin: 0.25em 1.5em 1em 0;
    clear: right;
}
/* ... */

